--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,6 +57,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'com.hfudev.song_ci_app'
 }
 
 flutter {
