--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hfudev.song_ci_app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="song_ci_app"
         android:name="${applicationName}"
